Layout And Dark Mode Fix
# some layout adjustments
# fix the Dark Mode issue
# don't access the Dark Mode menu checkbox with a static approach

--- a/app/css/dark_layout.css
+++ b/app/css/dark_layout.css
@@ -87,6 +87,11 @@ input
     background: #0288D1;
 }
 
+#content-right
+{
+    border-left: 1px solid #111;
+}
+
 #content-right-player svg
 {
     fill: #FFF;
